# wzq

./: .gitignore  README.md  人机对战.mov
client/duole_client_base/: .gitignore  CHANGELOG  CMakeLists.txt  README.md  version.json
client/duole_client_base/cmake/: DuoleClientBaseConfig.cmake
client/duole_client_base/cocos2d-duole/cmake/Modules/: CocosBuildHelpers.cmake
client/duole_client_base/cocos2d-duole/cocos/: Android.mk  CMakeLists.txt
client/duole_client_base/cocos2d-duole/cocos/2d/: CCActionInterval.cpp  CCActionInterval.h  CCMenu.cpp  CCNode.cpp  CCNode.h
client/duole_client_base/cocos2d-duole/cocos/base/: CCEventDispatcher.cpp  CCEventTouch.h
client/duole_client_base/cocos2d-duole/cocos/network/: Android.mk  CMakeLists.txt  DLHttpClient.cpp  DLHttpClient.h  DLHttpRequest.h  DLHttpResponse.h  HttpClient-android.cpp  HttpClient-apple.mm  HttpClient-winrt.cpp  HttpClient.cpp  HttpClient.h  HttpCookie.cpp  HttpCookie.h  HttpRequest.h  HttpResponse.h  WebSocket.cpp  WebSocket.h
client/duole_client_base/cocos2d-duole/cocos/platform/: CCFileUtils.cpp  CCFileUtils.h
client/duole_client_base/cocos2d-duole/cocos/ui/: Android.mk  CMakeLists.txt  CocosGUI.h  UIRichText.cpp  UIScrollView.cpp  UIScrollView.h  UIWebView-inl.h  UIWebView.h  UIWebViewImpl-android.cpp  UIWebViewImpl-android.h  UIWebViewImpl-ios.h  UIWebViewImpl-ios.mm
client/duole_client_base/cocos2d-duole/extensions/: Android.mk  CMakeLists.txt
client/duole_client_base/cocos2d-duole/extensions/assets-manager/: AssetsManager.cpp  AssetsManagerEx.cpp  AssetsManagerEx.h  Downloader.cpp  Manifest.cpp
client/duole_client_base/cocos2d-duole/libs/: CMakeLists.txt
client/duole_client_base/cocos2d-duole/libs/cmake/: DuoleCocosConfig.cmake
client/duole_client_base/cocos2d-duole/libs/src/: CMakeLists.txt  build.sh
client/duole_client_base/doc/: 基类库开发规范.md  多乐客户端基类库-修改记录.md  引擎升级lua改动-捕鱼.txt  引擎升级问题修改记录-跑胡子  引擎升级问题记录-掼蛋.txt  引擎升级问题记录-象棋.txt  新版本引擎升级计划.todo
client/duole_client_base/doc/jenkins/: Jenkins作业配置指南(保皇).md  Jenkins集群作业配置指南(保皇).md  cluster_job_baohuang_develop.sh  jenkins_build.sh  jenkins_cluster_build.sh  job_baohuang_develop.sh
client/duole_client_base/doc/多乐客户端项目 Git  仓库分支管理规范.mindnode/: contents.xml  viewState.plist
client/duole_client_base/gamebase/: CMakeLists.txt
client/duole_client_base/gamebase/src/: CMakeLists.txt
client/duole_client_base/gamebase/src/common/: AppConfig.cpp  AppConfig.hpp  AssetsDownloader.cpp  AssetsDownloader.h  EncodeDecodeUtil.cpp  EncodeDecodeUtil.h  JsonParser.h  ReaderWriter.cpp  ReaderWriter.h  Singleton.h  WebVariables.cpp  WebVariables.h  XXTeaCrypto.cpp  XXTeaCrypto.hpp  base64.cpp  base64.h  md5.cpp  md5.h
client/duole_client_base/gamebase/src/eff_comm/: ptrary.cpp  ptrary.h  ptrlist.cpp  ptrlist.h  ptrqueue.cpp  ptrqueue.h  workqueue.cpp  workqueue.h
client/duole_client_base/gamebase/src/lua_bindings/: LuaEditArea.cpp  LuaEditArea.h  LuaHttpRequest.cpp  LuaHttpRequest.h  LuaImagePicker.cpp  LuaImagePicker.h  lua_duole_assets_downloader.cpp  lua_duole_assets_downloader.h  lua_duole_edit_area.cpp  lua_duole_edit_area.h  lua_duole_encode_decode_util.cpp  lua_duole_encode_decode_util.h  lua_duole_http_request.cpp  lua_duole_http_request.h  lua_duole_image_picker.cpp  lua_duole_image_picker.h  lua_duole_reader_writer.cpp  lua_duole_reader_writer.h  lua_module_register_duole.h
client/duole_client_base/gamebase/src/socketx/: ccasyncsocketx.cpp  ccasyncsocketx.h  ccgamesocket.cpp  ccgamesocket.h  ccsocketx.cpp  ccsocketx.h  rounddatabuff.cpp  rounddatabuff.h
client/duole_client_base/sdks/platform/: CMakeLists.txt
client/duole_client_base/sdks/src/platform/: CMakeLists.txt  PlatformUtil.hpp
client/duole_client_base/third-sdks/bugly/: CMakeLists.txt
client/duole_client_base/third-sdks/bugly_v2/: CMakeLists.txt
client/duole_client_base/third-sdks/src/bugly/: CMakeLists.txt
client/duole_client_base/third-sdks/src/bugly_v2/: CMakeLists.txt  build.sh
client/duole_client_base/tools/: duole_build.sh  duole_build_appconfig.sh  duole_clean.sh  duole_distribute.sh  duole_jenkins_build.sh  duole_jenkins_cluster_build.sh  xxtea_crypto.py
client/wzq-client/code/: CMakeLists.txt  Cocos2d-x-3.17.2引擎升级指南-多乐跑胡子.md  app.properties  appconfig.json  build_config.sh  channels.txt  distribute-android.sh  distribute-ios.sh  jenkins_build.sh  jenkins_cluster_build.sh  upload_symbol.sh
client/wzq-client/code/Classes/: AppDelegate.cpp  AppDelegate.h  PlatformFunction.h  SignLayer.cpp  SignLayer.hpp
client/wzq-client/code/Classes/Controllers/: WZQController.cpp  WZQController.h  WZQControllerManager.cpp  WZQControllerManager.h  WZQDeviceSize.cpp  WZQDeviceSize.hpp  WZQFriendController.cpp  WZQFriendController.hpp  WZQInGameController.cpp  WZQInGameController.hpp  WZQLobbyController.cpp  WZQLobbyController.hpp  WZQLoginController.cpp  WZQLoginController.h
client/wzq-client/code/Classes/Core/: AppDef.h  AppEvent.h  AppFunc.cpp  AppFunc.h  AppModel.cpp  AppModel.h  AppRes.h  AppVersion.cpp  AppVersion.h
client/wzq-client/code/Classes/Event/: WZQEventWrapper.h  (+1 more)
client/wzq-client/code/proj.android/: build.gradle  gradle.properties  settings.gradle
client/wzq-client/code/proj.ios_mac/: KeychainAccessGroups.plist
service/duole_service_base/: CHANGELOG  CMakeLists.txt  README.md
service/duole_service_base/cmake/: BuildDefine.cmake  BuildHelpers.cmake  BuildSettings.cmake  Dependencies.cmake  DuoleDependencies.cmake
service/duole_service_base/projects_xcode/servicebase.xcodeproj/: project.pbxproj
service/duole_service_base/servicebase/src/: CMakeLists.txt  build.sh
service/duole_service_base/tools/: generate_all_protocol.sh
service/duole_service_base/unit_test/redis_loadrunner/: CMakeLists.txt
service/wzq-service/: CMakeLists.txt  README.md  build.sh
service/wzq-service/projects_xcode/wzqservice.xcworkspace/: contents.xcworkspacedata
service/wzq-service/service/wzqauth/: CMakeLists.txt
service/wzq-service/service/wzqconn/: CMakeLists.txt
service/wzq-service/service/wzqgame/: CMakeLists.txt
service/wzq-service/service/wzqroom/: CMakeLists.txt
(+416 files in other folders)
