CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# 项目信息设置
set(PROJECT_NAME wzqconn)

# 输出目录
SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../bin/service/${PROJECT_NAME}")
MESSAGE(STATUS "EXECUTABLE_OUTPUT_PATH: ${EXECUTABLE_OUTPUT_PATH}")

# 添加项目源文件
FILE(GLOB_RECURSE SOURCE_FILES 
	${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/*.cc)

# 添加项目头文件
include_sub_directories_recursively(${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}) 

# 生成可执行程序；
SET(ALL_SRCS ${SOURCE_FILES})
ADD_EXECUTABLE(${PROJECT_NAME} ${ALL_SRCS})

# 链接库设置；
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${duole_servicebase_libs} ${third_libs}) 

